--- a/hello-world-2201681056/src/app/app.component.html
+++ b/hello-world-2201681056/src/app/app.component.html
@@ -1,19 +1,25 @@
  
 
 <div class="book-wrapper">
-<button (click)="processPreviousBook()" class="button">Предишна книга</button>
+<button (click)="processPreviousBook()" class="button">Previous book</button>
 <div class="book-placeholder">
+
   <div class="book-placeholder--title">
-  Title: <input type="text" value={{BookCollection[index].title}}>
+  Title: <input  [(ngModel)]="modelTitle" (input)="processInputBookTitle($event)" type="text" name="title" value={{BookCollection[index].title}}>
   </div>
+
   <div class="book-placeholder--description">
-  Description:<textarea style="width: 300px;" rows="9" [value]="BookCollection[index].description"></textarea>
+  Description:<textarea [(ngModel)]="modelDescription" (input)="processInputBookDescription($event)" style="width: 300px;" name="description" rows="9" [value]="BookCollection[index].description"></textarea>
   </div>
+
   <div class="book-placeholder--author">
-  Author: <input type="text" value={{BookCollection[index].author}}>
+  Author: <input [(ngModel)]="modelAuthor" (input)="processInputBookAuthor($event)" type="text" name="author" value={{BookCollection[index].author}}>
   </div>
+
+  <button (click)="processNewData()" type="submit">Submit changes</button>
+
   <div class="book-placeholder--rating">
-   Current rating: <input type="text" value={{BookCollection[index].rating}}>
+   Current rating: {{BookCollection[index].rating}}
   </div>
   <div class="book-rating-buttons">
     <button (click)="processRating(1)" class="button">1</button>
@@ -22,9 +28,8 @@
     <button (click)="processRating(4)" class="button">4</button>
     <button (click)="processRating(5)" class="button">5</button>
   </div>
-  
 </div>
-<button (click)="processNextBook()" class="button">Следваща книга</button>
+<button (click)="processNextBook()" class="button">Next book</button>
 </div>
   
 
